[ADD] - Treasure Hunt Running Logic